# afick_parser

./: CMakeLists.txt  README.md  afickReport.cpp  afickReport.h  main.cpp
deploy/: AfickMonitoring_forceNew  jsonAfick.service  jsonAfick.timer
